5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1807_2564.log
== SUBMITION (2019-06-11 15:54:34) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]!=b[i]):
		c[2]=c[2]+1
print(c)
	
-- EXECUTION TIME:
1.036
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 6, in <module>
    for i in range(size(vet1)):
NameError: name 'vet1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:56:11) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)
	
-- EXECUTION TIME:
1.14352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 6, in <module>
    for i in range(size(vet1)):
NameError: name 'vet1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:56:24) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)
	
-- EXECUTION TIME:
1.21047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 6, in <module>
    for i in range(size(vet1)):
NameError: name 'vet1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:56:27) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:56:30) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(vet1)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)
	
-- EXECUTION TIME:
0.98599
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 6, in <module>
    for i in range(size(vet1)):
NameError: name 'vet1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:57:04) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=b[i]):
		c[0]=c[0]+1
	if(a[i]==b[i]):
		c[1]=c[1]+1
	if(a[i]<=b[i]):
		c[2]=c[2]+1
print(c)
	
-- EXECUTION TIME:
0.986416
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  3  5]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  1  1]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:58:47) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:59:14) 
-- CODE:
from numpy import *

a=array(eval(input('numero de gols efetuados do time: ')))
b=array(eval(input('numero de gols do time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)
	
-- EXECUTION TIME:
1.12088
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:39:30) 
-- CODE:
from numpy import*

a=array(eval(input('numero de gols do time: ')))
b=array(eval(input('numero de gols feito pelo time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
	print(c)

-- EXECUTION TIME:
1.07747
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
numero de gols do time: numero de gols feito pelo time adversario: [0 0 1]
[0 1 1]
[1 1 1]
[2 1 1]
[3 1 1]
[4 1 1]
[4 2 1]
[5 2 1]
[6 2 1]
[7 2 1]
[7 3 1]
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
numero de gols do time: numero de gols feito pelo time adversario: [0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
numero de gols do time: numero de gols feito pelo time adversario: [1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[10  1  0]
[11  1  0]
[12  1  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:40:41) 
-- CODE:
from numpy import*

a=array(eval(input('numero de gols do time: ')))
b=array(eval(input('numero de gols feito pelo time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
	print(c)

-- EXECUTION TIME:
0.987298
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 1]
[0 1 1]
[1 1 1]
[2 1 1]
[3 1 1]
[4 1 1]
[4 2 1]
[5 2 1]
[6 2 1]
[7 2 1]
[7 3 1]
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[10  1  0]
[11  1  0]
[12  1  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:40:54) 
-- CODE:
from numpy import*

a=array(eval(input('numero de gols do time: ')))
b=array(eval(input('numero de gols feito pelo time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
	print(c)

-- EXECUTION TIME:
1.07335
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 1]
[0 1 1]
[1 1 1]
[2 1 1]
[3 1 1]
[4 1 1]
[4 2 1]
[5 2 1]
[6 2 1]
[7 2 1]
[7 3 1]
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[10  1  0]
[11  1  0]
[12  1  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:41:04) 
-- CODE:
from numpy import*

a=array(eval(input('numero de gols do time: ')))
b=array(eval(input('numero de gols feito pelo time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
	print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:42:12) 
-- CODE:
from numpy import*

a=array(eval(input('numero de gols do time: ')))
b=array(eval(input('numero de gols feito pelo time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)

-- EXECUTION TIME:
1.04483
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
numero de gols do time: numero de gols feito pelo time adversario: [12  1  0]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:42:54) 
-- CODE:
from numpy import*

a=array(eval(input('numero de gols do time: ')))
b=array(eval(input('numero de gols feito pelo time adversario: ')))
c=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>b[i]):
		c[0]=c[0]+1
	elif(a[i]==b[i]):
		c[1]=c[1]+1
	else:
		c[2]=c[2]+1
print(c)
-- EXECUTION TIME:
1.12532
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
